[gd_scene load_steps=3 format=3 uid="uid://dfux8nha6l8da"]

[ext_resource type="Script" uid="uid://c4xdlmrcj6ept" path="res://Scripts/Objects/card.gd" id="1_77oaa"]
[ext_resource type="Texture2D" uid="uid://bbjc2bmsqto7k" path="res://icon.svg" id="1_k5eb0"]

[node name="Card" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 162.0
scale = Vector2(5, 5)
mouse_filter = 1
script = ExtResource("1_77oaa")
default_z = null
visual_only = null
card_name = "name"
card_description = "description"
card_graphics = ExtResource("1_k5eb0")

[node name="CardPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CardPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_k5eb0")
expand_mode = 1
stretch_mode = 6

[node name="nameLabel" type="Label" parent="CardPanel"]
z_index = 1
clip_contents = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -17.0
offset_top = 3.0
offset_right = 323.0
offset_bottom = 102.0
grow_horizontal = 2
scale = Vector2(0.1, 0.1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_font_sizes/font_size = 72
text = "name"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="propertiesLabel" type="Label" parent="CardPanel"]
z_index = 1
clip_contents = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -17.0
offset_top = -28.0
offset_right = 323.0
offset_bottom = 221.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 32
text = "description"
autowrap_mode = 2
clip_text = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
